--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 body {
-    background-color: #fef5e7;
-    font-family: Arial;
-    padding: 48px;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background: linear-gradient(135deg, #a6c1ee);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-h1 {
-    color: #d68910;
-    font-size: 49px;
-    text-align: center;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-h4 {
-    color: #b9770e;
-    font-size: 30px;
-    margin-top: 35px;
+.card img {
+  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 20px;
 }
 
-img {
-    width: 400px;
-    max-width: 100%;
-    border-radius: 10px;
-    margin: 20px 0;
+.card h1 {
+  color: #d16ba5;
+  margin-bottom: 10px;
 }
